syntax = "proto3";
package members.v1;

import "google/protobuf/timestamp.proto";

service MembersService {
	rpc List(ListRequest) returns (ListResponse);
	rpc Append(AppendRequest) returns (AppendResponse);
	rpc Drop(DropRequest) returns (DropResponse);
}

message ListRequest {
    string team = 1;
    string user = 2;
}

message ListResponse {
	repeated Member members = 1;
}

message AppendRequest {
	AppendMember member = 1;
}

message AppendMember {
    string team = 1;
    string user = 2;
}

message AppendResponse {
	string message = 1;
}

message DropRequest {
	DropMember member = 1;
}

message DropMember {
    string team = 1;
    string user = 2;
}

message DropResponse {
	string message = 1;
}

message Member {
	string team_id = 1;
	string team_slug = 2;
	string team_name = 3;
	string user_id = 4;
	string user_slug = 5;
	string user_name = 6;
	google.protobuf.Timestamp created_at = 7;
	google.protobuf.Timestamp updated_at = 8;
}
